2005-10-10  Øyvind Kolås  <pippin@gimp.org>

	* packages/cairo/ext/rb_cairo_pattern.c:
	(cr_gradient_pattern_add_color_stop): Make the code work when not
	passing the color as an array as well.

2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c: Added cairo version info.

	* packages/cairo/lib/cairo.rb: Added bindings version info as
	  1.0.0-beta.

	* samples/canvas: Removed.
	
	* packages/cairo/ext/: Added CVS keywords.

	* packages/cairo/ext/rb_cairo_context.c: Renamed 'xform'.
	* packages/cairo/ext/rb_cairo_font_face.c: ditto.
	* packages/cairo/ext/rb_cairo_glyph.c: ditto.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.

	* packages/cairo/ext/rb_cairo_private.c: Changed prefix to
	  'rb_cairo__' from 'cr__'.
	* packages/cairo/ext/rb_cairo_matrix.c: ditto.
	* packages/cairo/ext/rb_cairo_context.c: ditto.
	* packages/cairo/ext/rb_cairo_private.h: ditto.

	* packages/cairo/ext/rb_cairo_glyph.c:
	  - Use Cairo::Glyph#initialize instead of Cairo::Glyph.new.
	  - Added Cairo::Glyph#to_s.

	* packages/cairo/ext/rb_cairo_font_extents.c:
	  - Removed Cairo::FontExtents.new.
	  - Added Cairo::FontExtents#to_s.

	* packages/cairo/ext/rb_cairo_text_extents.c:
	  - Removed Cairo::TextExtents.new.
	  - Added Cairo::TextExtents#to_s.

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_constants.c: Supported all constants.

	* packages/cairo/ext/rb_cairo_matrix.c: Added a utility method.

	* packages/cairo/lib/cairo.rb: Remove deprecated API.
	
	* packages/cairo/ext/rb_cairo_matrix.c: Tidied cairo_matrix_t.
	* packages/cairo/lib/cairo.rb: ditto.

2005-10-09  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo_matrix.c: Moved duplicated
	  functions to ...
	* packages/cairo/ext/rb_cairo_private.h: ... here.
	* packages/cairo/ext/rb_cairo_private.c: ditto.

	* packages/cairo/ext/rb_cairo_scaled_font.c: Implemented
	  cairo_scaled_font_t.