@@ -1,3 +1,9 @@
+2005-10-11  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_pattern.c
+	(cr_gradient_pattern_add_color_stop_rgba): Renamed from
+	cr_gradient_pattern_add_color_stop.
+
 2005-10-10  Øyvind Kolås  <pippin@gimp.org>
 
 	* packages/cairo/ext/rb_cairo_pattern.c:
